--- a/index.css
+++ b/index.css
@@ -1,15 +1,23 @@
 body {
-  /* background-color: peru; */
+  background-color: #ecf0f1;
 }
-
 .btn {
-  /* cursor: pointer; */
+  cursor: pointer;
 }
 
-h1 {
-  /* color: "#34495e"; */
+body {
+  color: "#34495e";
 }
 
 .clicked {
-  /* color: #7f8c8d; */
+  color: #7f8c8d;
+}
+
+.form,
+.greetings {
+  display: none;
+}
+
+.showing {
+  display: block;
 }
